# reinforcement_playground

./: .gitignore  _  default.nix  pyproject.toml  requirements.lock.txt  requirements.txt
commands/: _  fk  install_nvidia_docker  run_and_log  setup_wrapped_commands  shell  test_stable_baselines
commands/project/: clean  purge  shell  start_notebook_server
commands/tools/: check_pip_modules  nix
documentation/: SETUP.md  setup.md
logs/compare/: 1_2_3_summary.csv  compare.jsonc
logs/stable_baselines/: monitor.csv  pong_monitor.csv
main/: informative_iterator.py
main/agent_builders/: universal_random.py
main/agents/: dqn_lstm.py
main/campaign_managers/: simple.py
main/entrypoints/: example.py  sac_pendulum.py  test_atari.py
main/experiments/: universal_memory_dqn.py
main/missions/: a2c_baselines@breakout_vectorized.py  a2c_baselines@breakout_vectorized_recorder.py  a2c_baselines@eval_breakout_vectorized.py  a2c_baselines@record_breakout_v4_my_preprocessing.py  a2c_baselines_and_imitator@breakout_v4_my_preprocessing.py  a2c_baselines_pure@breakout_v4.py  a2c_mine_small_vectorized@record_cartpole.py  auto_imitate_a2c_baselines@train_breakout_hacked_preprocessing.py  auto_imitate_a2c_baselines@train_breakout_vectorized.py  auto_imitate_dynamic_a2c_baselines@train_breakout_hacked_preprocessing.py  auto_imitator@breakout_v4_hacked_preprocessing.py  baselines_a2c@breakout_vectorized.py  baselines_a2c@breakout_vectorized_recorder.py  baselines_a2c@eval_breakout_vectorized.py  brute_force_fight_fire.py  chao_dqn@chao_breakout_v4.py  dqn_chao@breakout_v4_chao.py  dqn_chao@breakout_v4_hacked_preprocessing.py  dqn_chao_latent@breakout_v4_hacked_preprocessing.py  dqn_chao_transfer@breakout_v4_hacked_preprocessing.py  eval_baselines@breakout_v4_my_preprocessing.py  example.py  fire_fight_offline.json  memory_dqm.py  memory_learn.py  my_big_a2c@breakout_v4.py  my_small_a2c@cartpole.py  my_small_a2c_vectorized@cartpole.py  ppo@atari.py  ppo@atari_breakout.py  quick_experiment.py  task_list.yaml  template.py  train_baselines@breakout_v4_my_preprocessing.py  universal_memory_dqn.py
main/prefabs/: agent_recorder.py  baselines_optimizer.py  coder.py  fail_fast_check.py  fitness_trend_up.py  general_approximator.py  helpful_fitness_measures.py  memory.py  simple_lstm.py  variational_coder.py  variational_coder_world_models.py
main/runtimes/: simple.py
main/rverse/: agent.py  runtimes.py
main/tools/: afrl_tools.py  (+29 more)
repos/: stable-baselines
settings/: fornix_core  project.config.sh  projectr_core
wrapped_commands/: python  python3
(+294 files in other folders)
