[tool.poetry]
name = "reinforcement_playground"
version = "0.1.0"
description = ""
authors = ["Jeff Hykin <jeff.hykin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
pip = "20.1.1"
python-include = "1.0.0"
ez_yaml = "1.1.0"
numpy = "1.20.2"
PyYAML = "5.4.1"
torch = "1.8.1"
torchvision = "0.9.1"
opencv-python = "4.5.1.48"
gym = {extras = ["atari"], version = "^0.18.3"}
regex = "^2021.4.4"
tqdm = "^4.61.0"
pygame = "^2.0.1"
scikit-video = "^1.1.11"
matplotlib = "^3.4.2"
gdown = "^3.13.0"
torchsampler = { git = "https://github.com/jeff-hykin/imbalanced-dataset-sampler", tag = "1.0.0" }
Flask = "^2.0.1"
optuna = "^2.8.0"
silver-spectacle = "0.1.7"
ipykernel = "^6.0.3"
notebook = "^6.4.0"
ipywidgets = "^7.6.3"
simple-namespace = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
