[tool.poetry]
name = "reinforcement_playground"
version = "0.1.0"
description = ""
authors = ["Jeff Hykin <jeff.hykin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pip = "20.1.1"
python-include = "1.0.0"
ez_yaml = "1.1.0"
numpy = "1.20.2"
PyYAML = "5.4.1"
torch = "1.8.1"
torchvision = ">=0.9.1"
opencv-python = "4.5.1.48"
gym = {extras = ["atari"], version = "^0.18.3"}
regex = "2021.4.4"
tqdm = "4.61.0"
pygame = "2.0.1"
scikit-video = "1.1.11"
matplotlib = "3.4.2"
gdown = "3.13.0"
torchsampler = { git = "https://github.com/jeff-hykin/imbalanced-dataset-sampler", tag = "1.0.0" }
Flask = "^2.0.1"
silver-spectacle = "0.7.0"
slick-siphon = "0.1.1"
ipykernel = "^6.0.3"
notebook = "^6.4.0"
ipywidgets = "^7.6.3"
simple-namespace = "^1.0.0"
pytorch-lightning = "1.4.1"
super-map = "1.2.0"
super-hash = "1.0.5"
icecream = "^2.1.1"
optuna = "^2.9.1" # see during_start/021_001_get_around_broken_poetry.sh
# gym-donkeycar = { git = "https://github.com/tawnkramer/gym-donkeycar", tag = "v21.07.24" }
# carla = { git = "https://github.com/carla-simulator/carla", tag = "0.9.12" }
# poetry add git+https://github.com/carla-simulator/carla@0.9.12


json-fix = "^0.1.2"
stable-baselines3 = "^1.3.0"
informative-iterator = "0.0.3"
distro = "^1.7.0"
# carla = "0.9.12"
seaborn = "^0.11.2"
thop = "^0.0.31"
pandas = "^1.4.1"
Shapely = "1.8"
networkx = "2.7"
atari-py = "0.2.9"
jupyterthemes = "0.20.0"
blissful-basics = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
